# sledo

./: .gitignore  README.md  config.yaml  install.sh  install_dev.sh  moose_config.json  pyproject.toml
.github/workflows/: build-ci.yml
docker/sledo-ubuntu/: Dockerfile
examples/: example_1_simple_monoblock.py  example_2_monoblock.py  example_3_catbird_monoblock.py
examples/input_files/: catbird_monoblock.py  monoblock.i  monoblock_thermal.i  simple_monoblock.i  simple_monoblock_thermomech.i
examples/mooseherder/: design_evaluator.py  example_1_simple_monoblock.py  example_2_monoblock.py  mooseherder.py  proteusherder.py
examples/mooseherder/input_files/: monoblock_thermal.i  monoblock_thermomech.i  simple_monoblock.i
src/sledo/: __init__.py  design_evaluatior.py  design_evaluator.py  mooseherder_functions.py  optimiser.py  paths.py  simulation.py
tests/: test_design_evaluator.py  test_optimiser.py  test_simulation.py
tests/test_data/: input.i
tutorials/: tutorial_1.ipynb
