[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sledo"
version = "0.2.1"
description = "Sequential learning engineering design optimiser"
authors = [
  { name = "Luke Humphrey", email = "luke.humphrey@ukaea.uk" },
  { name = "Aleks Dubas", email = "aleksander.dubas@ukaea.uk" },
  { name = "Andy Davis", email = "andrew.davis@ukaea.uk" },
  { name = "Lloyd Flecther", email = "lloyd.fletcher@ukaea.uk" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU LGPL",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
  "ax-platform[mysql]==0.4.0",
  "dill==0.3.7",
  "ray[train]==2.9.0",
]

[project.optional-dependencies]
ci = [
    "flake8==7.0.0",
    "pytest==8.0.2",
]

[project.urls]
"Repository" = "https://github.com/aurora-multiphysics/sledo"
"Issue Tracker" = "https://github.com/aurora-multiphysics/sledo/issues"

[tool.setuptools.packages.find]
where = ["src"]
